respaldo-depuracion/2026-09-04-lote3-campos-objetos/objects/Invoice__c.object
<CustomObject>
    <description>Object defining all details of an invoice, as specified on Account detail and through the Import-Export Quote/Order</description>
    <fields>
        <fullName>Account_Price_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Price List</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>equals</operation>
                <valueField>Customer_Price_List__c.Customer__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Customer_Price_List__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Acuse_en_SAP__c</fullName>
        <formula>Shipment__r.Acuse_en_SAP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acuse en SAP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount_Allocated_on_IE_Item_Lines__c</fullName>
        <label>Amount Allocated on IE Cargo Lines</label>
        <summarizedField>Import_Export_Item_Line_Invoice__c.Amount_Allocated__c</summarizedField>
        <summaryForeignKey>Import_Export_Item_Line_Invoice__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Amount_Allocated_on_IE_Service_Lines__c</fullName>
        <label>Amount Allocated on IE Service Lines</label>
        <summarizedField>Import_Export_Service_Line_Invoice__c.Amount_Allocated__c</summarizedField>
        <summaryForeignKey>Import_Export_Service_Line_Invoice__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Amount_Item_Lines__c</fullName>
        <label>Amount Allocated on Ship. Cargo Lines</label>
        <summarizedField>Invoice_Item_Line__c.Amount__c</summarizedField>
        <summaryForeignKey>Invoice_Item_Line__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Amount_Received_Imp_Exp_Currency__c</fullName>
        <description>&quot;Amount Received&quot; x &quot;Conversion Rate to Imp-Exp Currency&quot;</description>
        <formula>Amount_Received__c * Conversion_Rate_to_Imp_Exp_Currency__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;Amount Received&quot; x &quot;Conversion Rate to Imp-Exp Currency&quot;</inlineHelpText>
        <label>Amount Received Imp-Exp Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_Received__c</fullName>
        <label>Amount Received</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Service_Lines__c</fullName>
        <label>Amount Allocated on Ship. Service Lines</label>
        <summarizedField>Invoice_Service_Line__c.Amount__c</summarizedField>
        <summaryForeignKey>Invoice_Service_Line__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Amount_Shipment_Lines__c</fullName>
        <label>Amount Allocated on SP Service Lines</label>
        <summarizedField>Invoice_Service_Line__c.Amount__c</summarizedField>
        <summaryForeignKey>Invoice_Service_Line__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Campo_Control__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo para el monitoreo y control de registros bloqueados por parte de SAP</description>
        <label>Campo Control</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cfdi_Number__c</fullName>
        <label>Cfdi Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Collection_Outstanding_Balance__c</fullName>
        <description>Conversion to currency of &quot;Total (Incl VAT)&quot; - &quot;Amount Received&quot;</description>
        <formula>Total_Incl_VAT__c - Amount_Received__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;Total (Incl VAT)&quot; - &quot;Amount Received&quot;</inlineHelpText>
        <label>Collection Outstanding Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Dependent on &quot;Customer Account&quot;</inlineHelpText>
        <label>Customer Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conversion_Rate_to_Imp_Exp_Currency__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Conversion Rate to Imp-Exp Currency</label>
        <precision>12</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Creada_Factura__c</fullName>
        <formula>CONTAINS( SAP_Response__r.Message__c , &quot;Creada Factura&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Creada Factura</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customs_Value__c</fullName>
        <label>Customs Value</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Invoice_SAP__c</fullName>
        <label>Date Invoice SAP</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Receive_from_SAP__c</fullName>
        <label>Date Receive from SAP</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Send_to_SAP__c</fullName>
        <label>Date Send to SAP</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_of_Invoice__c</fullName>
        <label>Date of Invoice</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ejecutivo_Comercial_Mt__c</fullName>
        <formula>Account__r.Owner.FirstName  &amp;&quot; &quot;&amp;   Account__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ejecutivo Comercial Mt</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ejecutivo_Comercial__c</fullName>
        <formula>Import_Export_Quote_Order__r.Account_for__r.Owner.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ejecutivo Comercial</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Cobranza_1__c</fullName>
        <label>Email Cobranza 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Facturado_2__c</fullName>
        <label>Fecha Facturado</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fecha_Cobrado__c</fullName>
        <label>Fecha Pagado</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_Facturado_1__c</fullName>
        <label>Fecha facturado V</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FolioEntrega__c</fullName>
        <label>Folio de Entrega</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_SAP__c</fullName>
        <label>Id_SAP</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Import_Export_Quote_Order__c</fullName>
        <label>Import-Export Quote/Order</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Customer_Quote__c.Account_for__c</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Customer_Quote__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Initial_Invoice_Warehouse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initial Invoice Warehouse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Concept__c</fullName>
        <label>Invoice Concept</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Status__c</fullName>
        <label>Invoice Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Send to Sap</fullName>
                </value>
                <value>
                    <fullName>Received from Sap</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>Facturado</fullName>
                </value>
                <value>
                    <fullName>Cobrado</fullName>
                </value>
                <value>
                    <fullName>Cobrado parcial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Template__c</fullName>
        <label>Invoice Template</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Neurored</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoiced_Correctly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoiced Correctly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoiced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoiced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mensaje_Sap__c</fullName>
        <formula>SAP_Response__r.Message__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mensaje Sap</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meta_Comercial_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Meta Comercial</label>
        <referenceTo>Metas__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NC_Importe_Total__c</fullName>
        <label>Importe Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NC_Motivo__c</fullName>
        <label>Motivo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NC_Numero_Credito__c</fullName>
        <label>Numero Credito</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NC_Numero_Factura__c</fullName>
        <label>Numero Factura</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Applicable_N_Invoice_Lines__c</fullName>
        <label>Non Applicable (N) Invoice Lines</label>
        <summarizedField>Invoice_Line__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Invoice_Line__c.VAT_Non_Applicable__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice_Line__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Non_Applicable_N__c</fullName>
        <description>Conversion to currency of total amount invoiced where VAT is not applicable, from Non Applicable (N) Invoice Lines Roll-Up</description>
        <formula>Non_Applicable_N_Invoice_Lines__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non Applicable (N)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Numero_Folio__c</fullName>
        <label>Numero Folio</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operations_Executive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operations Executive</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outstanding_Balance__c</fullName>
        <description>Conversion to currency of (&quot;Amount Item Lines&quot; + &quot;Amount Service Lines&quot; + &quot;Amount Allocated on IE Service Lines&quot; + &quot;Amount Allocated on IE Item Lines&quot;) - &quot;Total (Excl VAT)&quot;</description>
        <formula>(  Amount_Item_Lines__c +  Amount_Service_Lines__c + Amount_Allocated_on_IE_Service_Lines__c + Amount_Allocated_on_IE_Item_Lines__c) -  Total_Excl_VAT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Amount - &quot;Total (Excl VAT)&quot;</inlineHelpText>
        <label>Allocation Outstanding Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payable_Before__c</fullName>
        <label>Payable Before</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Price_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price List</label>
        <referenceTo>Price_List__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Profit_Shipment__c</fullName>
        <formula>Shipment__r.Profit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Profit Shipment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Proforma_Invoice__c</fullName>
        <label>Proforma Invoice</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Received_Date__c</fullName>
        <label>Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Received_as__c</fullName>
        <label>Received as</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full Amount</fullName>
                </value>
                <value>
                    <fullName>Partial Amount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requiere_Acuse__c</fullName>
        <formula>Text(Account__r.Requiere_Acuse_Sap__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requiere Acuse?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requiere_Orden_de_Compra__c</fullName>
        <formula>Account__r.Requiere_Orden_de_Compra__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requiere Orden de Compra</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAP_Response__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relacionamiento con Sap Response para identificar información en campos 
Uso: Formula fecha facturado</description>
        <label>SAP Response2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Response__c.Message__c</field>
                <operation>contains</operation>
                <value>Factura</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Response__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_ExecutiveIEQ__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Executive</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Invoices1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipment_Create_Date__c</fullName>
        <formula>Shipment__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipment Create Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Shipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipment</label>
        <referenceTo>Shipment__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Standard_S_Invoice_Lines__c</fullName>
        <label>Standard (S) Invoice Lines</label>
        <summarizedField>Invoice_Line__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Invoice_Line__c.VAT_Non_Applicable__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Invoice_Line__c.VAT__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice_Line__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Standard_S__c</fullName>
        <description>Conversion to currency of total invoiced amount with standard VAT, from Standard (S) Invoice Lines Roll-Up</description>
        <formula>Standard_S_Invoice_Lines__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Standard (S)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status_Acuse_SAP__c</fullName>
        <formula>Shipment__r.Status_Acuse_SAP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Acuse SAP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Planner__c</fullName>
        <formula>TEXT(Shipment__r.Shipment_Status_Plann__c)</formula>
        <label>Status Planner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timbrado_Factura_SAP__c</fullName>
        <label>Timbrado Factura SAP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Excl_VAT_Imp_Exp_Currency2__c</fullName>
        <formula>TEXT(ROUND(Total_Excl_VAT_Imp_Exp_Currency__c ,2)) /*&amp;&quot; &quot;&amp; TEXT(Import_Export_Quote_Order__r.CurrencyIsoCode)*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total (Excl. VAT) (Imp-Exp Currency)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Excl_VAT_Imp_Exp_Currency__c</fullName>
        <description>Product of &quot;Total (Excl VAT)&quot; and &quot;Conversion Rate to Imp-Exp Currency&quot;</description>
        <formula>Total_Excl_VAT__c* Conversion_Rate_to_Imp_Exp_Currency__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total (Excl. VAT) (Imp-Exp Currency) (N)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Excl_VAT_Invoice_Lines__c</fullName>
        <label>Total (Excl. VAT) Invoice Lines</label>
        <summarizedField>Invoice_Line__c.Amount__c</summarizedField>
        <summaryForeignKey>Invoice_Line__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Excl_VAT__c</fullName>
        <description>Conversion to currency of Total (Excl VAT) Invoice Lines Roll-Up</description>
        <formula>Total_Excl_VAT_Invoice_Lines__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total (Excl. VAT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Incl_VAT_Imp_Exp_Currency2__c</fullName>
        <formula>TEXT(ROUND(Total_Incl_VAT_Imp_Exp_Currency__c ,2)) /*&amp;&quot; &quot;&amp; TEXT(Import_Export_Quote_Order__r.CurrencyIsoCode)*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total (Incl. VAT) (Imp-Exp Currency)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Incl_VAT_Imp_Exp_Currency__c</fullName>
        <formula>Total_Incl_VAT__c * Conversion_Rate_to_Imp_Exp_Currency__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total (Incl. VAT) (Imp-Exp Currency) (N)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Incl_VAT__c</fullName>
        <description>Conversion to currency of &quot;Total (Excl VAT)&quot; + &quot;Total VAT&quot;</description>
        <formula>Total_Excl_VAT__c + Total_VAT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;Total (Excl VAT)&quot; + &quot;Total VAT&quot;</inlineHelpText>
        <label>Total (Incl. VAT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Invoice_SAP__c</fullName>
        <label>Total Invoice SAP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Services_Profit_Shipment__c</fullName>
        <formula>Shipment__r.Total_Services_Std_Profit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Services Profit Shipment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Services_Sell_Amount_Shipment__c</fullName>
        <formula>Shipment__r.Total_Services_Sell_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Services Sell Amount (Shipment)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_VAT_Invoice_Lines__c</fullName>
        <label>Total VAT Invoice Lines</label>
        <summarizedField>Invoice_Line__c.Total_VAT__c</summarizedField>
        <summaryForeignKey>Invoice_Line__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_VAT__c</fullName>
        <description>Conversion to currency of Total VAT Invoice Lines Roll-Up</description>
        <formula>Total_VAT_Invoice_Lines__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total VAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vessel__c</fullName>
        <formula>Import_Export_Quote_Order__r.Vessel_Flight__r.Name</formula>
        <label>Vessel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VoBo_Lideres__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VoBo Lideres</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WP_AccOwner__c</fullName>
        <formula>Account__r.Owner.Workplace__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Workplace Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warehouse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Warehouse</label>
        <referenceTo>Warehouse__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zero_Z_Invoice_Lines__c</fullName>
        <label>Zero (Z) Invoice Lines</label>
        <summarizedField>Invoice_Line__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Invoice_Line__c.VAT__c</field>
            <operation>equals</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice_Line__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Zero_Z__c</fullName>
        <description>Conversion to currency of Zero (Z) Invoice Lines Roll-Up</description>
        <formula>Zero_Z_Invoice_Lines__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zero (Z)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Shipment__c</columns>
        <columns>Account__c</columns>
        <columns>WP_AccOwner__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Cobrado</fullName>
        <columns>NAME</columns>
        <columns>Invoice_Status__c</columns>
        <columns>Fecha_Cobrado__c</columns>
        <columns>Facturado_2__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Invoice_Status__c</field>
            <operation>equals</operation>
            <value>Cobrado</value>
        </filters>
        <label>Cobrado</label>
    </listViews>
    <listViews>
        <fullName>Facturado</fullName>
        <columns>NAME</columns>
        <columns>Invoice_Status__c</columns>
        <columns>Facturado_2__c</columns>
        <columns>Fecha_Facturado_1__c</columns>
        <columns>Fecha_Cobrado__c</columns>
        <columns>Creada_Factura__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Account__c</columns>
        <columns>Shipment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Invoice__c.Invoice,Invoice__c.InvoiceStatus</value>
        </filters>
        <filters>
            <field>Invoice_Status__c</field>
            <operation>equals</operation>
            <value>Facturado</value>
        </filters>
        <filters>
            <field>Facturado_2__c</field>
            <operation>greaterThan</operation>
            <value>1/1/2024 12:00 AM</value>
        </filters>
        <label>Facturado</label>
    </listViews>
    <listViews>
        <fullName>NAYLETH</fullName>
        <columns>NAME</columns>
        <columns>Shipment__c</columns>
        <columns>Account__c</columns>
        <columns>WP_AccOwner__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Shipment__c</field>
            <operation>equals</operation>
            <value>SP-FI-21-036022</value>
        </filters>
        <label>NAYLETH</label>
    </listViews>
    <nameField>
        <label>Invoice Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <recordTypes>
        <fullName>Invoice</fullName>
        <active>true</active>
        <label>Invoice</label>
    </recordTypes>
    <recordTypes>
        <fullName>InvoiceStatus</fullName>
        <active>true</active>
        <label>Invoice BLOQ</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Credit_Note_Negative_Amount</fullName>
        <active>true</active>
        <errorConditionFormula>text(Type__c) == &apos;Credit Note&apos; &amp;&amp; Total_Incl_VAT__c &gt; 0</errorConditionFormula>
        <errorMessage>You can’t include these lines because Total(Incl. Vat) in the “Credit Note” Invoice must be negative</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Debit_Note_Positive_Amount</fullName>
        <active>true</active>
        <errorConditionFormula>text(Type__c) == &apos;Debit Note&apos; &amp;&amp; Total_Incl_VAT__c &lt; 0</errorConditionFormula>
        <errorMessage>You can´t include these lines because Total (Incl. VAT) in the &quot;Debit Note&quot; Invoice must be positive</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Equals_Account_For</fullName>
        <active>true</active>
        <errorConditionFormula>Account__c  &lt;&gt;  Shipment__r.Account_for__c</errorConditionFormula>
        <errorDisplayField>Account__c</errorDisplayField>
        <errorMessage>El cliente no coincide con el Shipment</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Acuse_SAP</fullName>
        <active>false</active>
        <errorConditionFormula>Status_Acuse_SAP__c &lt;&gt; &quot;ACUSE RECIBIDO&quot;</errorConditionFormula>
        <errorMessage>ERROR: El estatus del Acuse en SAP debe ser: &quot;ACUSE RECIBIDO&quot;
Favor de acudir con Departamento de Acuses (Rocio Osuna)</errorMessage>
    </validationRules>
</CustomObject>